<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/myProfPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:src="@drawable/my_photo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mySurname"
        android:id="@+id/TextViewMySurname"
        android:layout_marginTop="46dp"
        android:textColor="@color/txt_color"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignTop="@+id/myProfPhoto"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/myName"
        android:id="@+id/textView"
        android:layout_below="@+id/TextViewMySurname"
        android:textColor="@color/txt_color"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/myProfPhoto"
        android:layout_toEndOf="@+id/myProfPhoto"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mySecondname"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:textColor="@color/txt_color"
        android:textStyle="bold"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_toRightOf="@+id/myProfPhoto"
        android:layout_toEndOf="@+id/myProfPhoto"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/myEmail"
        android:id="@+id/textView3"
        android:textColor="@color/txt_color"
        android:layout_alignBottom="@+id/myProfPhoto"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="33dp"
        android:textAlignment="center"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:textStyle="italic" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myProfPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/skillBox"
        android:textAlignment="viewStart"
        android:gravity="start"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/my_txt"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/txt_color" />
</RelativeLayout>
